--- a/PersonalPortal/PersonalPortal/Style/Css/Algorithm/AStar.css
+++ b/PersonalPortal/PersonalPortal/Style/Css/Algorithm/AStar.css
@@ -1,6 +1,10 @@
 ﻿body {
-    width: 1122px;
+    width: 1280px;
     margin: 30px auto;
+}
+
+.ng-cloak {
+    display: none !important;
 }
 
 .tooltip-inner {
@@ -34,12 +38,20 @@
             height: 100%;
         }
 
-        .container_head .item span {
+        .container_head .item span, .container_head .item label {
             margin: 0 4px;
+            font-weight: normal;
         }
 
         .container_head .item input[type=number] {
             width: 50px;
+        }
+
+        .container_head .item input[type=checkbox] {
+            display: inline-block;
+            vertical-align: middle;
+            margin: 0;
+            margin-bottom: 2px;
         }
 
         .container_head .item button {
@@ -54,20 +66,44 @@
 
 .container_bottom {
     width: 160px;
-    height: 540px;
+    height: 630px;
     border-bottom: 1px solid rgba(202, 202, 202, 0.5);
-    border-bottom-right-radius: 10px;
+    padding: 5px;
+    overflow-y: scroll;
 }
+    /*定义滚动条的轨道，内阴影及圆角*/
+    .container_bottom::-webkit-scrollbar {
+        background-color: rgba(202, 202, 202, 0.5);
+        width: 15px;
+    }
+
+    /*定义滑块，内阴影及圆角*/
+    .container_bottom::-webkit-scrollbar-thumb {
+        height: 10px;
+        border-radius: 2px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+        background-color: #aaa;
+    }
+
+    .container_bottom .item {
+        padding-left: 20px;
+    }
+
+        .container_bottom .item li {
+            margin-bottom: 10px;
+        }
 
 .container_content {
-    width: 960px;
-    height: 540px;
+    width: 1120px;
+    height: 630px;
     border: 1px solid rgba(202, 202, 202, 0.5);
     border-top: none;
-    border-bottom-left-radius: 10px;
 }
 
     .container_content canvas {
-        width: 100%;
-        height: 100%;
+        width: 1120px;
+        height: 630px;
+        position: absolute;
+        margin-top: 0px;
+        margin-left: -1px;
     }
