--- a/PersonalPortal/PersonalPortal/Views/Algorithm/AStar.html
+++ b/PersonalPortal/PersonalPortal/Views/Algorithm/AStar.html
@@ -24,7 +24,11 @@
             </div>
             <div class="item">
                 <span>障碍比例:</span>
-                <input class="slider" data-slider-min="0" data-slider-max="40" data-slider-step="1" data-slider-value="10" />
+                <input class="slider" data-slider-min="0" data-slider-max="40" data-slider-step="1" data-slider-value="20" />
+            </div>
+            <div class="item">
+                <input id="showWayNum" ng-model="showWayNum" type="checkbox" />
+                <label for="showWayNum">是否显示步数</label>
             </div>
             <div class="item">
                 <button ng-click="CreateMap()">生成地图</button>
@@ -35,33 +39,105 @@
         </div>
         <!--效果区-->
         <div class="container_content">
-            <canvas id="content" width="960" height="540"></canvas>
+            <canvas id="content" width="1120" height="630"></canvas>
+            <canvas id="content_text" width="1120" height="630"></canvas>
         </div>
         <!--可视化数据-->
-        <div class="container_bottom"></div>
+        <div class="container_bottom">
+            <p>用时统计：</p>
+            <ul class="item">
+                <li>
+                    <div class="line">
+                        <span>开始时间：</span>
+                    </div>
+                    <div class="line">
+                        <span ng-bind="startTime_text"></span>
+                    </div>
+                </li>
+                <li>
+                    <div class="line">
+                        <span>结束时间：</span>
+                    </div>
+                    <div class="line">
+                        <span ng-bind="endTime_text"></span>
+                    </div>
+                </li>
+                <li>
+                    <div class="line">
+                        <span>共计用时：</span>
+                    </div>
+                    <div class="line">
+                        <span ng-bind="useTime_text"></span>
+                    </div>
+                </li>
+            </ul>
+            <p>路程详情：</p>
+            <ul class="item">
+                <li>
+                    <div class="line">
+                        <span>路程总长：</span>
+                    </div>
+                    <div class="line">
+                        <span ng-show="LineArray.length > 0" ng-bind="LineArray.length - 1"></span>
+                    </div>
+                </li>
+            </ul>
+            <p>路程详情：</p>
+            <ul class="item">
+                <li ng-cloak class="ng-cloak" ng-repeat="item in LineArray" ng-show="$index != 0">
+                    <div class="line">
+                        <span>第</span>
+                        <span ng-bind="$index"></span>
+                        <span>步</span>
+                    </div>
+                    <div class="line">
+                        <span>坐标: (</span>
+                        <span ng-bind="item.x"></span>
+                        <span>, </span>
+                        <span ng-bind="item.y"></span>
+                        <span>)</span>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
     <script type="text/javascript" src="/Scripts/AngularInstance.js"></script>
     <script type="text/javascript" src="/Scripts/CanvasHelper.js"></script>
     <script type="text/javascript" src="/Scripts/bootstrap-3.3.7-dist/js/bootstrap-slider.min.js"></script>
-    <script type="text/javascript" src="/Scripts/A-Star.js"></script>
     <script type="text/javascript">
-        var process = $("input.slider").slider();
-
         Angular(function ($scope, factory) {
+            var process = $("input.slider").slider();
             var canvas = new Canvas('content');
+            var textCanvas = new Canvas('content_text');
 
+            //默认参数设置区
             $scope.Spacing = 2;
-            $scope.position_x = 16;
-            $scope.position_y = 9;
+            $scope.position_x = 32;
+            $scope.position_y = 18;
+            $scope.showWayNum = true;
+            $scope.LineArray = [];
 
-            $scope.CreateMap = function () {
-                canvas.Clear();
-                canvas.size.spacing = $scope.Spacing;
-                canvas.AutoSize($scope.position_x, $scope.position_y);
-                var slider = parseInt(process[0].value);
-
+            //重置画布
+            $scope.Clear = function () {
+                $scope.LineArray = [];
                 $scope.Map = [];
                 $scope.ScoreMap = [];
+                $scope.startTime_text = '';
+                $scope.endTime_text = '';
+                $scope.useTime_text = '';
+
+                canvas.Clear();
+                textCanvas.Clear();
+                canvas.size.spacing = textCanvas.size.spacing = $scope.Spacing;
+                canvas.AutoSize($scope.position_x, $scope.position_y);
+                textCanvas.AutoSize($scope.position_x, $scope.position_y);
+            }
+
+            //生成地图
+            $scope.CreateMap = function () {
+                $scope.Clear();
+
+                var slider = parseInt(process[0].value);
                 for (var x = 0; x < $scope.position_x; x++) {
                     $scope.Map[x] = [];
                     $scope.ScoreMap[x] = [];
@@ -70,12 +146,12 @@
                         var result;
                         if (x == 0 && y == 0) {
                             result = true;
-                            canvas.Text('起点', x, y);
+                            textCanvas.Text('起点', x, y);
                         } else if (x == $scope.position_x - 1 && y == $scope.position_y - 1) {
                             result = true;
-                            canvas.Text('终点', x, y);
+                            textCanvas.Text('终点', x, y);
                         } else {
-                            result = parseInt(Math.random() * 100) > slider;  //是否为正常地形
+                            result = parseInt(Math.random() * 100) > slider; //是否为正常地形
                         }
 
                         $scope.Map[x][y] = result;
@@ -88,38 +164,97 @@
 
             //返回指定位置是否允许通过
             $scope.IsAllow = function (x, y, special) {
-                return $scope.Map.length > x
-                    && $scope.Map[x]
-                    && $scope.Map[x].length > y
-                    && $scope.Map[x][y]
-                    && (!special || (!(x == 0 && y == 0) && !(x == $scope.Map.length - 1 && y == $scope.Map[0].length - 1)));
+                return $scope.Map.length > x &&
+                    $scope.Map[x] &&
+                    $scope.Map[x].length > y &&
+                    $scope.Map[x][y] &&
+                    (!special || (!(x == 0 && y == 0) && !(x == $scope.Map.length - 1 && y == $scope.Map[0].length - 1)));
             }
 
+            //开始寻路算法
             $scope.FindWay = function () {
+                $scope.startTime = new Date();
+
                 $scope.ScoreMap[0][0] = 0;
-                $scope.NextWay(0, 0, 1);
+                $scope.NextWay(0, 0, 1, []);
             }
 
-            $scope.NextWay = function (x, y, index) {
+            $scope.NextWay = function (x, y, index, lineInfo) {
+                //添加当前位置
+                lineInfo[index - 1] = {
+                    x: x,
+                    y: y
+                };
+
                 for (offset_x = -1; offset_x <= 1; offset_x++) {
                     for (offset_y = -1; offset_y <= 1; offset_y++) {
-                        var temp_x = x + offset_x, temp_y = y + offset_y;
+                        var temp_x = x + offset_x,
+                            temp_y = y + offset_y;
 
                         if ($scope.IsAllow(temp_x, temp_y, false)) {
                             //如果节点为空或者大于当前序号，修改节点值，并进行递归
                             if (isNaN($scope.ScoreMap[temp_x][temp_y]) || $scope.ScoreMap[temp_x][temp_y] > index) {
                                 $scope.ScoreMap[temp_x][temp_y] = index;
-                                canvas.Text($scope.ScoreMap[temp_x][temp_y], temp_x, temp_y);
 
-                                setTimeout(function (temp_x, temp_y) {
-                                    return function () {
-                                        $scope.NextWay(temp_x, temp_y, index + 1);
+                                if (temp_x == $scope.Map.length - 1 && temp_y == $scope.Map[0].length - 1) {
+                                    //如果终点，开始绘制最短路线
+                                    lineInfo[index] = {
+                                        x: temp_x,
+                                        y: temp_y
+                                    };
+                                    $scope.Line(lineInfo);
+                                    return;
+                                } else {
+                                    if ($scope.showWayNum) {
+                                        textCanvas.Text($scope.ScoreMap[temp_x][temp_y], temp_x, temp_y);
                                     }
-                                }(temp_x, temp_y), 10);
+                                    //递归设置下一节点
+                                    setTimeout(function (temp_x, temp_y) {
+                                        return function () {
+                                            $scope.NextWay(temp_x, temp_y, index + 1, lineInfo.concat());
+                                        }
+                                    }(temp_x, temp_y), 10);
+                                }
                             }
                         }
                     }
                 }
+            }
+
+            //绘制结果线段
+            $scope.Line = function (lineInfo) {
+                $scope.LineArray = lineInfo;
+                textCanvas.LineArray(lineInfo, '#FF4500');
+
+                $scope.endTime = new Date();
+                $scope.useTime = $scope.endTime - $scope.startTime;
+
+                $scope.startTime_text = $scope.FormatDate($scope.startTime, 'mm:ss:S');
+                $scope.endTime_text = $scope.FormatDate($scope.endTime, 'mm:ss:S');
+                $scope.useTime_text = $scope.FormatDate(new Date($scope.useTime), 'mm:ss:S');
+                $scope.$apply();
+            }
+
+            $scope.FormatDate = function (date, fmt) {
+                var o = {
+                    "M+": date.getMonth() + 1,                 //月份
+                    "d+": date.getDate(),                    //日
+                    "h+": date.getHours(),                   //小时
+                    "m+": date.getMinutes(),                 //分
+                    "s+": date.getSeconds(),                 //秒
+                    "q+": Math.floor((date.getMonth() + 3) / 3), //季度
+                    "S": date.getMilliseconds()             //毫秒
+                };
+                if (/(y+)/.test(fmt))
+                    fmt = fmt.replace(RegExp.$1, (date.getFullYear() + "").substr(4 - RegExp.$1.length));
+                for (var k in o)
+                    if (new RegExp("(" + k + ")").test(fmt))
+                        fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
+                return fmt;
+            }
+
+            $scope.FormatDateSpan = function (milliseconds) {
+                return $scope.FormatDate(new Date(milliseconds));
             }
         });
     </script>
