--- a/PersonalPortal/PersonalPortal/Style/Css/Algorithm/AStar.css
+++ b/PersonalPortal/PersonalPortal/Style/Css/Algorithm/AStar.css
@@ -25,14 +25,19 @@
     border-radius: 10px 10px 0 0;
     padding: 5px;
     font-size: 12px;
+    text-align: center;
 }
 
     .container_head .item {
-        float: left;
+        display: inline-block;
         height: 22px;
         margin-top: 11px;
-        margin-right: 40px;
+        margin-right: 30px;
     }
+
+        .container_head .item:last-child {
+            margin-right: 0;
+        }
 
         .container_head .item * {
             height: 100%;
@@ -41,6 +46,10 @@
         .container_head .item span, .container_head .item label {
             margin: 0 4px;
             font-weight: normal;
+        }
+
+        .container_head .item select {
+            width: 100px;
         }
 
         .container_head .item input[type=number] {
