提交在线翻译页面

--- a/PersonalPortal/PersonalPortal/Views/Index.html
+++ b/PersonalPortal/PersonalPortal/Views/Index.html
@@ -141,6 +141,10 @@
                     "LinkUrl": "/Views/ToolsBox/Json.html",
                     "Navigation": []
                 }, {
+                    "LinkName": "在线翻译",
+                    "LinkUrl": "/Views/ToolsBox/Translator.html",
+                    "Navigation": []
+                }, {
                     "LinkName": "数据加密解密",
                     "LinkUrl": "/Views/ToolsBox/Encryption.html",
                     "Navigation": []
